package distributionNetWork;

public class Produtor extends User {

    public Produtor(Localizacao localizacao, String codUser) {
        super(localizacao, codUser);
    }
}
